--- a/app/scss/_nav.scss
+++ b/app/scss/_nav.scss
@@ -3,6 +3,7 @@
 .nav {
   display: flex;
   justify-content: space-between;
+  padding: 20px 0;
 
   &__brand {
     color: #fff;
@@ -23,13 +24,14 @@
       position: absolute;
       flex-direction: column;
       align-items: center;
+      background-color: var(--primary);
       top: 105px;
       left: -100%;
       width: 100%;
       height: 100vh;
 
       transition: all 250ms ease-in-out;
-      z-index: -1;
+      z-index: 999;
 
       &.active {
         left: 0;
@@ -37,17 +39,52 @@
     }
 
     a {
-      color: var(--secondary);
       font-size: rem(16);
       font-weight: 500;
+    }
+
+    .nav__item {
+      color: var(--secondary);
+      @include breakpoint(large) {
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
   }
 
   button {
     display: none;
+    border: 0;
+    background-color: transparent;
 
     @include breakpoint-down(small) {
       display: block;
+
+      span {
+        display: block;
+        width: 30px;
+        height: 3px;
+        margin-bottom: 5px;
+        background-color: #fff;
+        border-radius: 3px;
+        transition: 250ms ease-in-out;
+        transform-origin: 3px 2px;
+      }
+
+      &.open {
+        span:nth-child(1) {
+          transform: rotate(45deg);
+        }
+
+        span:nth-child(2) {
+          opacity: 0;
+        }
+
+        span:nth-child(3) {
+          transform: rotate(-45deg);
+        }
+      }
     }
   }
 }
