--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,10 @@
 @use "utils" as *;
 @use "nav";
 @use "hero";
+@use "about";
+@use "projects";
+@use "skills";
+@use "socials";
 
 body {
   min-height: 100vh;
