final desktop styles and projects description

--- a/app/scss/_projects.scss
+++ b/app/scss/_projects.scss
@@ -102,5 +102,12 @@
         color: var(--secondary);
       }
     }
+
+    @include breakpoint-down(medium) {
+      &:active {
+        background: var(--tertiary);
+        color: var(--secondary);
+      }
+    }
   }
 }
